--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
       </ul>
     </nav>
   	<div class="top">
-      <img id="cloud-top" src="cloud.png">
+      <img class="clouds" id="cloud-top" src="cloud.png">
     	<h1>I'm Nestor</h1>
     	<h2>A Web Developer</h2>
-      <img id="cloud-bottom" src="cloud.png">
+      <img class="clouds" id="cloud-bottom" src="cloud.png">
       <img id="mountain" src="mountain.png">
 	</div>
 	<div class="middle-container">
   <div class="profile">
+    <div class="hello-bubble">
+      <h2>Hello.</h2>
+    </div>
     <img src="avatar.svg" alt="" id="avatar">
-    <h2>Hello.</h2>
     <p class="intro">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
   </div>
   <div class="dot-border">
@@ -38,17 +40,17 @@
   <div class="skills">
     <h2>My Skills.</h2>
     <div class="skill-row">
-      <img class="icons" src="css.svg" alt="">
+      <img class="icons groupIcons" src="css.svg" alt="">
       <h3>Lorem & Ipsum</h3>
       <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros dolor sit amet, mauris sed consectetuer.</p>
     </div>
     <div class="skill-row">
-      <img class="icons2" src="html.svg" alt="">
+      <img class="icons2 groupIcons" src="html.svg" alt="">
       <h3>Lorem Ipsum Dolor</h3>
       <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
     </div>
     <div class="skill-row">
-      <img class="icons" src="js.svg" alt="">
+      <img class="icons groupIcons" src="js2.svg" alt="">
       <h3>Lorem & Ipsum</h3>
       <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros dolor sit amet, mauris sed consectetuer. Etiam et eu.</p>
     </div>
@@ -65,7 +67,7 @@
     <h2>Get In Touch</h2>
     <h3>Lorem ipsum dolor sit amet, non elit.</h3>
     <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-    <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+    <a class="btn" href="mailto:ncervi87@gmail.com">CONTACT ME</a>
   </div>
 </div>
 
@@ -74,7 +76,7 @@
   <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
   <a class="footer-link" href="https://twitter.com/">Twitter</a>
   <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-  <p>© 2018 Name Surname.</p>
+  <p>© 2019 Nestor.</p>
 </div>
 
   </body>
